--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.7.1",
     "telegraf": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.9",
     "@types/uuid": "^8.3.0",
+    "postcss": "^8.3.0",
+    "postcss-preset-env": "^6.7.0",
     "prisma": "^2.24.0",
+    "tailwindcss": "^2.1.4",
     "typescript": "^4.3.2"
   }
 }
